# nightcore

./: .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml  docker_image.sh  run.sh  test.sh
dockerfiles/: Dockerfile.launcher  Dockerfile.nightcore
examples/c/: run_stack.sh
examples/go/: run_stack.sh
examples/node/: run_stack.sh
examples/python/: run_stack.sh
src/base/: CMakeLists.txt
src/common/: CMakeLists.txt  stat.h
src/engine/: CMakeLists.txt
src/gateway/: CMakeLists.txt
src/ipc/: CMakeLists.txt
src/launcher/: CMakeLists.txt
src/server/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/worker/: CMakeLists.txt
